hphp/hack/test/typecheck/new_inference/typehole/merge_tvars2.php.exp
File "merge_tvars2.php", line 15, characters 19-27:
Invalid argument (Typing[4110])
File "merge_tvars2.php", line 18, characters 27-32:
Expected string
File "merge_tvars2.php", line 14, characters 11-11:
But got int
